crates/oxc_css_parser/tests/recoverable/declaration/top-level-ident-escaped.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: declaration at top level is disallowed
  ┌─ top-level-ident-escaped.css:1:1
  │
1 │ height: 1px\65
  │ ^^^^^^^^^^^^^^
